--- a/about.html
+++ b/about.html
@@ -57,20 +57,20 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav text-uppercase ml-auto">
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger text-dark  " href="index.html">Home</a>
+              <a class="nav-link js-scroll-trigger text-secondary  " href="index.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger active" href="about.html">About </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger text-dark " href="#services">Services</a>
+              <a class="nav-link js-scroll-trigger text-secondary " href="#services">Services</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger text-dark " href="portfolio.html">Portfolio</a>
+              <a class="nav-link js-scroll-trigger text-secondary " href="portfolio.html">Portfolio</a>
             </li>
 
 			<li class="nav-item">
-              <a class="nav-link js-scroll-trigger text-dark " href="contact.html">Contact </a>
+              <a class="nav-link js-scroll-trigger text-secondary " href="contact.html">Contact </a>
             </li>
           </ul>
         </div>
