--- a/contact.html
+++ b/contact.html
@@ -57,14 +57,14 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav text-uppercase ml-auto">
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger text-dark  " href="index.html">Home</a>
+              <a class="nav-link js-scroll-trigger text-secondary  " href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger text-dark " href="./about.html">About </a>
+              <a class="nav-link js-scroll-trigger text-secondary " href="./about.html">About </a>
             </li>
            
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger text-dark " href="portfolio.html">Portfolio</a>
+              <a class="nav-link js-scroll-trigger text-secondary " href="portfolio.html">Portfolio</a>
             </li>
 		
 			<li class="nav-item">
