--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       </div>
     </nav>
 	
-	<section id="home" class="main-banner parallaxie" style="background: url('uploads/leks.jpg')">
+	<section id="home" class="main-banner parallaxie" style="background: url('images/nbg3.jpg')">
 		<div class="heading">
 			<h1>Welcome to my Profile</h1>	
       <h2 style="color: white;">My name is Sylvia osimiri</h2>		
