--- a/portfolio.html
+++ b/portfolio.html
@@ -77,7 +77,7 @@
       </div>
     </nav>
 	
-	<section id="home" class="main-banner parallaxie" style="background: url('uploads/leks.jpg')">
+	<section id="home" class="main-banner parallaxie" style="background: url('images/nbg3.jpg')">
 		<div class="heading">
 			<h1>Welcome to My Portfolio</h1>			
 			<h3 class="cd-headline clip is-full-width">
